--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="interaction">
+    <div class="image">
       <img src="images/rock-paper-scissors-neon-icons.svg" alt="">
+    </div>
+    <div class="interaction">
       <label>Enter your choice here</label>
       <input type="text" , id="humanChoice" />
       <button>PLAY</button>
