add paypal link

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <span class="word-paper">Paper</span>,
       <span class="word-scissors">Scissors</span>
     </h1>
+    <h2>If you win, you are the greatest! But if I win, you have to send 5€ to my <a href="https://www.paypal.com/paypalme/felixblochwitz/5">Paypal</a></h2>
     <div class="play-buttons-container">
         <button id="play-button-rock">
           <img class="play-button-img" src="images/rock_ohne.png" alt="" />
