Add event listeners to buttons
This commit adds event listeners to buttons and removes
code that is not needed anymore because input is not
created manually by the players anymore.

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
       <h2>Choose your Weapon</h2>
       <p>Click one of the buttons below</p>
       <div class="play-buttons-container">
-        <button id="play-button-rock">
+        <button class="play-button" id="play-button-rock">
           <img class="play-button-img" src="images/rock_ohne.png" alt="" />
         </button>
-        <button id="play-button-paper">
+        <button class="play-button" id="play-button-paper">
           <img class="play-button-img" src="images/paper_ohne.png" alt="" />
         </button>
-        <button id="play-button-scissors">
+        <button class="play-button" id="play-button-scissors">
           <img class="play-button-img" src="images/scissors_ohne.png" alt="" />
         </button>
       </div>
