--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <span class="word-scissors">Scissors</span>
       </h1>
       <h2>
-        If you win, you are the greatest! But if I win, you have to send 5€ to
+        If you win, you are the greatest! But if you lose, you have to send 5€ to
         my
-        <a href="https://www.paypal.com/paypalme/felixblochwitz/5">Paypal</a>
+        <a href="https://www.paypal.com/paypalme/felixblochwitz/5" target="_blank">Paypal</a>
       </h2>
     </div>
 
@@ -43,17 +43,18 @@
       <h2>First to 5 wins!</h2>
       <div class="choices">
         <h4>Human</h4>
-        <img class="choice-img" src="images/rock_ohne.png" alt="Human Test" />
+        <img class="choice-img" id="human-choice-img" src="" />
         <h3>:</h3>
         <img
           class="choice-img"
-          src="images/scissors_ohne.png"
-          alt="Comp Test"
+          id="computer-choice-img"
+          src=""
         />
         <h4>Computer</h4>
       </div>
-      <h3>Result Text</h3>
-      <div class="standings"></div>
+      <p id="round-result-text">Who will win?</p>
+      <div class="score"></div>
+      <h2>Score</h2>
     </div>
   </body>
 </html>
