--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
         <span class="word-scissors">Scissors</span>
       </h1>
       <h2>
-        If you win, you are the greatest! But if you lose, you have to send 5€ to
-        my
-        <a href="https://www.paypal.com/paypalme/felixblochwitz/5" target="_blank">Paypal</a>
+        If you win, you are the greatest! But if you lose, you have to send 5€
+        to my
+        <a
+          href="https://www.paypal.com/paypalme/felixblochwitz/5"
+          target="_blank"
+          >Paypal</a
+        >
       </h2>
     </div>
 
@@ -40,21 +44,18 @@
     </div>
     <!-- results section -->
     <div>
-      <h2>First to 5 wins!</h2>
+      <div class="score">
+        <h2>First to 5 wins!</h2>
+        <h2><span id="player-score">0</span> : <span id="computer-score">0</span></h2>
+      </div>
       <div class="choices">
-        <h4>Human</h4>
+        <h4>Player</h4>
         <img class="choice-img" id="human-choice-img" src="" />
         <h3>:</h3>
-        <img
-          class="choice-img"
-          id="computer-choice-img"
-          src=""
-        />
+        <img class="choice-img" id="computer-choice-img" src="" />
         <h4>Computer</h4>
       </div>
       <p id="round-result-text">Who will win?</p>
-      <div class="score"></div>
-      <h2>Score</h2>
     </div>
   </body>
 </html>
