--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
     <div>
       <div class="score">
         <h2>First to 5 wins!</h2>
-        <h2><span id="player-score">0</span> : <span id="computer-score">0</span></h2>
+        <h2>
+          <span class="competitor-scores" id="player-score">0</span> :
+          <span class="competitor-scores" id="computer-score">0</span>
+        </h2>
       </div>
       <div class="choices">
         <h4>Player</h4>
