--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <img class="paypal" src="images/paypal_button_round.png" alt="" />
           </button>
         </a>
-        <button class="modal-button" id="restart-button">
+        <button class="modal-button" id="restart-button2">
           <h2 class="button-label">Restart</h2>
         </button>
       </div>
